# OpenRisk

./: .gitignore  Cargo.toml  GA_READINESS_REMEDIATION.md  PRODUCTION_READINESS_REVIEW.md  README.md  REMEDIATION_PLAN.md  calibration-plan.md  openrisk-architecture-constitution.md  openrisk-architecture-v2.md  openrisk-entity-registry-v1.md  openrisk-international-entities.md  openrisk-scanner-architecture.v1 (1).md  openrisk-scoring-methodology.md  openrisk-specification-v0.2.md  openrisk-whitepaper.md  pyproject.toml  requirements.txt
calibration/: analysis_summary.json  labeling_sheet.csv  run_calibration.py  scorer.py
docs/: calibration-plan.md  openlabels-architecture-v2.md  openlabels-constitution.md  openlabels-entity-registry-v1.md  openlabels-framework-v1.0.md  openlabels-label-schema-v1.md  openlabels-spec-v1.md  openrisk-architecture-v2.md  openrisk-constitution.md  openrisk-framework-v1.0.md  production-readiness-remediation.md
docs/deployment/: configuration.md
openlabels/: __init__.py  client.py  context.py  health.py  logging_config.py  shutdown.py
openlabels/adapters/: __init__.py  base.py  dlp.py  m365.py  macie.py  nfs.py  ntfs.py  presidio.py  purview.py
openlabels/adapters/scanner/: __init__.py  adapter.py  config.py  constants.py  exceptions.py  extractor.py  ocr.py  queue.py  scanner_adapter.py  temp_storage.py  types.py  validators.py
openlabels/adapters/scanner/detectors/: __init__.py  additional_patterns.py  base.py  checksum.py  constants.py  context_enhancer.py  dictionaries.py  financial.py  government.py  labels.py  metadata.py  ml.py  orchestrator.py  pattern_registry.py  patterns.py  regulated_sectors.py  secrets.py  structured.py  thread_pool.py
openlabels/adapters/scanner/detectors/patterns/: __init__.py  address.py  credentials.py  definitions.py  detector.py  false_positives.py  financial.py  government.py  healthcare.py  native.py  pii.py  validators.py
openlabels/adapters/scanner/detectors/structured/: __init__.py  core.py  label_detection.py  unlabeled_patterns.py  value_extraction.py
openlabels/adapters/scanner/extractors/: __init__.py  archive.py  base.py  image.py  office.py  pdf.py  registry.py
openlabels/adapters/scanner/pipeline/: confidence.py  merger.py  name_processing.py  span_cleanup.py
openlabels/agent/: collector.py  ntfs.py  posix.py  watcher.py
openlabels/auth/: __init__.py  crypto.py  jwt.py  models.py  users.py
openlabels/cli/: __init__.py  filter.py  main.py  output.py
openlabels/cli/commands/: __init__.py  config.py  delete.py  encrypt.py  export.py  find.py  health.py  heatmap.py  inventory.py  move.py  quarantine.py  report.py  restrict.py  scan.py  shell.py  tag.py
openlabels/components/: fileops.py  reporter.py  scanner.py  scorer.py
openlabels/core/: __init__.py  constants.py  entity_types.py  exceptions.py  labels.py  merger.py  orchestrator.py  registry.py  scorer.py  triggers.py  types.py  vendors.py  weights.py
openlabels/core/registry/: __init__.py  categories.py  vendor_aliases.py  weights.py
openlabels/gui/: main.py  main_window.py  style.py
openlabels/gui/widgets/: audit_dialog.py  dashboard.py  dialogs.py  file_detail_dialog.py  folder_tree.py  label_preview.py  recovery_dialog.py  results_table.py  scan_target.py
openlabels/gui/workers/: file_watcher.py  scan_worker.py
openlabels/output/: __init__.py  embed.py  index.py  postgres_index.py  reader.py  report.py  virtual.py
openlabels/output/embed/: __init__.py  base.py  image.py
openlabels/utils/: __init__.py  hashing.py  retry.py
openlabels/vault/: audit.py  vault.py
orscan/: __init__.py  cli.py  config.py  constants.py  detector.py  exceptions.py
orscan/detectors/: orchestrator.py
orscan/files/: __init__.py  ocr.py  temp_storage.py
orscan/pipeline/: __init__.py
registry/: SDK.md
scripts/: benchmark_detector.py
src/: lib.rs  matcher.rs  validators.rs
tests/: AUDIT_REPORT.md  test_audit.py  test_auth.py  test_cli_integration.py  test_client.py  test_collector.py  test_components_scanner.py  test_detector_orchestrator.py  test_encrypt_security.py  test_extractors.py  test_fileops.py  test_gui.py  test_health.py  test_logging_config.py  test_merger.py  test_orchestrator.py  test_postgres_index.py  test_production_readiness_phase1.py  test_production_readiness_phase3.py  test_production_readiness_phase4.py  test_production_readiness_phase6.py  test_report.py  test_retry.py  test_toctou_security.py  test_validators_and_pipeline.py  test_vault.py
tests/test_adapters/: test_cloud_adapters.py
tests/test_cli/: test_find_command.py  test_quarantine_command.py  test_report_command.py  test_scan_command.py
tests/test_output/: test_index.py
tests/test_scanner/: test_checksum_detector.py  test_government_detector.py  test_ocr.py  test_patterns_detector.py  test_secrets_detector.py
