[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openlabels"
version = "0.1.0"
description = "Universal Data Risk Scoring - Labels are the primitive, risk is derived"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "OpenLabels Contributors"}
]
keywords = ["data-sensitivity", "pii", "phi", "dlp", "risk-scoring", "data-governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
pdf = ["pymupdf>=1.23.0"]
office = ["python-docx>=1.0.0", "openpyxl>=3.1.0"]
images = ["pillow>=10.0.0"]
ocr = [
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
    "rapidocr-onnxruntime>=1.3.0",
]
performance = ["pyahocorasick>=2.0.0"]
security = ["regex>=2023.0.0"]  # Enables ReDoS timeout protection
all = [
    "openlabels[pdf,office,images,ocr,performance,security]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
openlabels = "openlabels.cli.main:main"

[project.urls]
Homepage = "https://github.com/openlabels/openlabels"
Documentation = "https://openlabels.dev/docs"
Repository = "https://github.com/openlabels/openlabels"
Issues = "https://github.com/openlabels/openlabels/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openlabels*"]

[tool.setuptools.package-data]
openlabels = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
